// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power Fx Functions [CountIf error1] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "type": "any",
    "value": "CountIf",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "attrs": Object {
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "type": "any",
    "value": ">=",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;

exports[`Power Fx Functions [CountIf ok] =CountIf(#28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a.62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "type": "any",
    "value": "=",
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "CountIf",
    "errors": Array [],
    "type": "any",
    "value": "CountIf",
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "type": "any",
    "value": "(",
  },
  Object {
    "attrs": Object {
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [],
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "type": "any",
    "value": ",",
  },
  Object {
    "attrs": Object {
      "id": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "kind": "Spreadsheet",
      "name": "MySpreadsheet",
      "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    },
    "code": "Spreadsheet",
    "display": "MySpreadsheet",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "type": "Spreadsheet",
    "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "type": "any",
    "value": ".",
  },
  Object {
    "attrs": Object {
      "id": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
      "kind": "Column",
      "name": "first",
      "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    },
    "code": "Column",
    "display": "first",
    "errors": Array [
      Object {
        "message": "Expected number but got Column",
        "type": "type",
      },
    ],
    "type": "Column",
    "value": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "type": "boolean",
    "value": ">=",
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "type": "number",
    "value": "3",
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "type": "number",
    "value": ")",
  },
]
`;
